Replace all String#format with String#formatted